--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ local.properties
 # PDT-specific
 .buildpath
 
+#######################
+## PHPStorm (JetBrains)
+#######################
+.idea
 
 #################
 ## Visual Studio
@@ -213,3 +217,9 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+
+########
+## Misc
+########
+vendor
